# mini-dfs-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp
.github/workflows/: ci.yml  dfs-system-tests.yml
cache/: cache.c  cache.h  main.cpp
cache_node/: cache.c  cache.h  cache_analyzer.c  cache_analyzer.h  cache_stats.c  cache_stats.h  main.cpp
client/: dfs.cpp
metadata_node/: main.cpp
scripts/: run_all.sh  run_basic_tests.sh  test_cache.sh  test_cache_analyzer.sh  test_cache_concurrent.sh  test_cache_concurrent_load.sh  test_cache_key_isolation.sh  test_cache_size_limit.sh  test_cache_stats.sh  test_cache_ttl.sh  test_cache_update.sh  test_e2e.sh  test_invalidation.sh  test_large_file.sh  test_metadata.sh  test_small_file.sh  test_split.sh  test_storage.sh
storage_node/: main.cpp
